mule-management-console/v/3.3/analyzing-business-events.adoc
= Analyzing Business Events

== Overview

Today's businesses require accurate analysis of their daily transactions and events. Mule Management Console provides a robust dashboard to monitor business transactions and events.

This page introduces the Business Events tab in Mule Management Console and walk through some examples of how to use this tab to monitor and track business events at runtime. For more information about setting up your application to enable tracking of custom and default business events, see the link:/mule-user-guide/v/3.3/business-events[Business Events] page.

Most businesses need access to information surrounding the following use case examples:

* Root cause analysis - determine where errors are occuring.
* Regulatory compliance - compliance to business rules, policies, and standards.
* Business activity monitoring - drill-down to monitor specific transactions.
* Business intelligence - retrieves and analyzes your data.

Mule gives you in-depth visibility into business transactions and events on your Mule servers. This visibility is available out of the box via the Business Events tab in the Management Console. All transactions can be stored in a persistent database and retrieved later for integration with other applications. You can track events about the flows and message processor handling your business transactions and drill down into event-related data which provide information to help analyze the root cause of failures, isolate performance, bottlenecks, and test for compliance to company procedures.

== Using the Business Events Tab

The Mule servers generate default events for the flows and message processors handling your business transactions, tracking such information as processing time and errors. For example, lets assume you have an order fulfillment application. Suppose a customer has reported they have not received an order. You can use the business event data from the customer's transaction to do root cause analysis of the failure.

image:BusEventOrderID.png[BusEventOrderID]

From the MMC, click the Business Events tab and screen above will appear. You can select a variable to search by clicking the drop-down box:

image:BEDropdown1a.png[BEDropdown1a]

The example uses Customer ID to filter the Business Event data. The Customer ID is order-2011-10-12-1223-100.

image:BusEventOrderDrill.png[BusEventOrderDrill]

You can display for the events generated in the flow for that transaction and identify where things failed. Drill down on the ID to view detailed event information.

For example, suppose the order fulfillment application applies a price discount depending on customer tiering. You can ensure that the discount is properly applied by defining custom events that track the price of an item before and after the discount is applied.

After you run a transaction, you can view the data for the "before" event (listed here as "Price") to see the customer's discount tier as well as the price before the discount is applied. And you can view the data for the "after" event (listed here as "Price After Discount") to see the price after the discount is applied.

image:CustomEventDiscount.png[CustomEventDiscount]

Clicking on the custom event displays the associated data in pop-up window.

image:custom-event-discount-popup.png[custom-event-discount-popup]

In summary, all events, regardless if they are custom or default, are stored in database for retrieval and analysis. From the Business Events tab, the console enables you to retrieve transaction and event information. In addition, you can also audit events. Auditing events has a low overhead and minimally affects server processing.

You can set up queries to select and view subsets of business transactions handled by your servers. You specify a various criteria for selecting transactions, search for particular values, and apply filters to the results.

== See Also

* See link:/mule-management-console/v/3.3/tracking-and-querying-business-events[Tracking and Querying Business Events] for details on how to use the transaction and event querying and filtering features.
* See link:/mule-management-console/v/3.3/business-events-use-cases[Business Events Use Cases] for detailed examples that illustrates the use of the Business Events tab in a business-oriented setting.
* See link:/mule-user-guide/v/3.3/business-events[Business Events] to learn about setting up business events in your Mule applications.
